Wire up styles for all other pages css

--- a/workouts.html
+++ b/workouts.html
@@ -6,6 +6,7 @@
     <title>Workouts – Everyday Engine</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <?!= include('styles'); ?>
+    <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
   <body>
     <?!= include('header'); ?>
@@ -3259,7 +3260,7 @@ alt="Ultrahuman screenshot"
         <div>Built to document a real Hyrox journey week by week. No hype, just honest work.</div>
       </div>
     </footer>
-    
+
     <script>
   (function () {
     var select = document.getElementById('weekSelect');
