--- a/weekly-recaps.html
+++ b/weekly-recaps.html
@@ -6,6 +6,7 @@
     <title>Weekly Recaps – Everyday Engine</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <?!= include('styles'); ?>
+    <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
   <body>
     <?!= include('header'); ?>
