--- a/about.html
+++ b/about.html
@@ -50,7 +50,8 @@
             <div class="about-left">
               <div class="profile-photo-frame">
   <img
-    src="data:image/png;base64,
+  <img src="assets/img/Jeff-profile-hyrox.png" alt="About Jeff">
+
     alt="Profile photo of Jeff"
     class="profile-photo-img"
   >
