--- a/workouts.html
+++ b/workouts.html
@@ -75,11 +75,7 @@
                 Screenshot or summary of body composition trends for the selected week.
               </p>
               <div class="metric-image-frame">
-  <img 
-    src="data:image/png;base64,
-alt="Body pod screenshot"
-    class="metric-image"
-  >
+  <img src="assets/img/Bodypod-week1.png" alt="Body Pod Week 1">
 </div>
 </article>
       <!-- Welltory card -->
@@ -90,11 +86,7 @@ alt="Body pod screenshot"
                 HRV, stress, and readiness from Welltory that guide intensity for the day.
               </p>
               <div class="metric-image-frame">
-  <img 
-    src="data:image/png;base64,
-alt="Welltory readiness screenshot"
-    class="metric-image"
-  >
+  <img src="assets/img/Welltory-week1.png" alt="Welltory week 1">
 </div>
 </article>
 
@@ -106,11 +98,7 @@ alt="Welltory readiness screenshot"
                 Sleep, recovery, and strain metrics that inform how aggressive the session should be.
               </p>
               <div class="metric-image-frame">
-  <img 
-    src="data:image/png;base64,
-alt="Ultrahuman screenshot"
-    class="metric-image"
-  >
+            <img src="assets/img/Ultrhuman-week1.png" alt="Ultrahuman week 1">
 </div>
 </article>
     </div>
@@ -1034,11 +1022,7 @@ alt="Ultrahuman screenshot"
                 Screenshot or summary of body composition trends for the selected week.
               </p>
               <div class="metric-image-frame">
-  <img 
-    src="data:image/png;base64,
-    alt="Body pod screenshot"
-    class="metric-image"
-  >
+             <img src="assets/img/week2-bodypod.png" alt="Bodypod week 2">
 </div>
             </article>
 
@@ -1049,11 +1033,7 @@ alt="Ultrahuman screenshot"
                 HRV, stress, and readiness from Welltory that guide intensity for the day.
               </p>
               <div class="metric-image-frame">
-  <img 
-    src="data:image/png;base64,
-    alt="Welltory readiness screenshot"
-    class="metric-image"
-  >
+              <img src="assets/img/Welltory-week2.png" alt="Welltory week 2">
 </div>
             </article>
 
@@ -1064,12 +1044,7 @@ alt="Ultrahuman screenshot"
                 Sleep, recovery, and strain metrics that inform how aggressive the session should be.
               </p>
               <div class="metric-image-frame">
-  <img 
-    src="data:image/png;base64,
-    alt="Ultrahuman screenshot"
-    class="metric-image"
-  >
-</div>
+             <img src="assets/img/Ultra-week2.png" alt="Ultrahuman week 2">
 
 </article>
 </div>
