no mobile display nav section and first table scroll on workouts week 2

--- a/workouts.html
+++ b/workouts.html
@@ -75,7 +75,7 @@
                 Screenshot or summary of body composition trends for the selected week.
               </p>
               <div class="metric-image-frame">
-  <img src="assets/img/Bodypod-week1.png" alt="Body Pod Week 1">
+  <img src="assets/img/week2-bodypod.png" alt="Body Pod Week 2">
 </div>
 </article>
       <!-- Welltory card -->
@@ -86,7 +86,7 @@
                 HRV, stress, and readiness from Welltory that guide intensity for the day.
               </p>
               <div class="metric-image-frame">
-  <img src="assets/img/Welltory-week1.png" alt="Welltory week 1">
+  <img src="assets/img/Welltory-week2.png" alt="Welltory week 2">
 </div>
 </article>
 
@@ -98,7 +98,7 @@
                 Sleep, recovery, and strain metrics that inform how aggressive the session should be.
               </p>
               <div class="metric-image-frame">
-            <img src="assets/img/Ultrhuman-week1.png" alt="Ultrahuman week 1">
+            <img src="assets/img/Ultra-week2.png" alt="Ultrahuman week 2">
 </div>
 </article>
     </div>
@@ -145,6 +145,7 @@
 <div class="session-zone">Primary Zone: Zone 4</div>
 </div>
 
+<div class="table-scroll">
 <table class="session-table">
 <thead>
 <tr>
@@ -168,6 +169,7 @@
 </tr>
 </tbody>
 </table>
+</div>
 
 
 <div class="session-hr-summary">
@@ -1022,7 +1024,7 @@
                 Screenshot or summary of body composition trends for the selected week.
               </p>
               <div class="metric-image-frame">
-             <img src="assets/img/week2-bodypod.png" alt="Bodypod week 2">
+             <img src="assets/img/Bodypod-week1.png" alt="Bodypod week 1">
 </div>
             </article>
 
@@ -1033,7 +1035,7 @@
                 HRV, stress, and readiness from Welltory that guide intensity for the day.
               </p>
               <div class="metric-image-frame">
-              <img src="assets/img/Welltory-week2.png" alt="Welltory week 2">
+              <img src="assets/img/Welltory-week1.png" alt="Welltory week 1">
 </div>
             </article>
 
@@ -1044,7 +1046,7 @@
                 Sleep, recovery, and strain metrics that inform how aggressive the session should be.
               </p>
               <div class="metric-image-frame">
-             <img src="assets/img/Ultra-week2.png" alt="Ultrahuman week 2">
+             <img src="assets/img/Ultrhuman-week1.png" alt="Ultrahuman week 1">
 
 </article>
 </div>
