cleaned css fixed nav

--- a/workouts.html
+++ b/workouts.html
@@ -6,7 +6,8 @@
     <title>Workouts – Everyday Engine</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <?!= include('styles'); ?>
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/styles.css?v=2">
+
   </head>
   <body>
     <?!= include('header'); ?>
@@ -145,7 +146,7 @@
 <div class="session-zone">Primary Zone: Zone 4</div>
 </div>
 
-<div class="table-scroll">
+
 <table class="session-table">
 <thead>
 <tr>
@@ -169,7 +170,6 @@
 </tr>
 </tbody>
 </table>
-</div>
 
 
 <div class="session-hr-summary">
