cleaned up header and fix nav bar

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <title>Everyday Engine – Hyrox Journey</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <?!= include('styles'); ?>
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/styles.css?v=2">
+
   </head>
   <body>
     <header class="site-header">
       <div class="nav-inner">
-        <a href="https://script.google.com/macros/s/AKfycbwqaHDtrangRMZOslUZ9uYREU1mz_kUnRdMuUKr6dAZb7uG8vweLAMVPLSChZuzFQ_f/exec?page=home" class="brand">
+        <a href="index.html" class="brand">
           <div class="brand-mark"></div>
           <div class="brand-text">
             <span class="brand-title">Everyday Engine</span>
@@ -52,12 +53,12 @@
             </p>
 
             <div class="hero-actions">
-              <a href="https://script.google.com/macros/s/AKfycbwqaHDtrangRMZOslUZ9uYREU1mz_kUnRdMuUKr6dAZb7uG8vweLAMVPLSChZuzFQ_f/exec?page=recaps"
+              <a href="weekly-recaps.html"
               class="btn btn-primary">
               Watch the latest weekly recap
             </a>
 
-            <a href="https://script.google.com/macros/s/AKfycbwqaHDtrangRMZOslUZ9uYREU1mz_kUnRdMuUKr6dAZb7uG8vweLAMVPLSChZuzFQ_f/exec?page=dashboard"
+            <a href="start-your-journey.html"
             class="btn btn-ghost">
             View training metrics
             </a>
