--- a/start-your-journey.html
+++ b/start-your-journey.html
@@ -6,13 +6,14 @@
     <title>Start Your Own Journey – Everyday Engine</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <?!= include('styles'); ?>
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/styles.css?v=2">
+
   </head>
   <body>
     <?!= include('header'); ?>
     <header class="site-header">
       <div class="nav-inner">
-        <a href="https://script.google.com/macros/s/AKfycbwqaHDtrangRMZOslUZ9uYREU1mz_kUnRdMuUKr6dAZb7uG8vweLAMVPLSChZuzFQ_f/exec?page=home" class="brand">
+        <a href="index.html" class="brand">
           <div class="brand-mark"></div>
           <div class="brand-text">
             <span class="brand-title">Everyday Engine</span>
