--- a/workouts.html
+++ b/workouts.html
@@ -13,7 +13,7 @@
     <?!= include('header'); ?>
     <header class="site-header">
       <div class="nav-inner">
-        <a href="https://script.google.com/macros/s/AKfycbwqaHDtrangRMZOslUZ9uYREU1mz_kUnRdMuUKr6dAZb7uG8vweLAMVPLSChZuzFQ_f/exec?page=home" class="brand">
+        <a href="index.html" class="brand">
           <div class="brand-mark"></div>
           <div class="brand-text">
             <span class="brand-title">Everyday Engine</span>
