Journey Sleep score scroll yes

--- a/journey-dashboard.html
+++ b/journey-dashboard.html
@@ -160,7 +160,7 @@
         Average nightly sleep score for the week, combining duration and quality into one simple checkpoint.
       </p>
       <div class="data-embed">
-       <iframe width="572" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRRtDdM2lDhqg2gXJr4gtz2BeKjxS8EJCbSnTJytZgA6wLnjUKHaUBVeiyaQlIF7adwkFFHHz3oOuYu/pubchart?oid=736627100&amp;format=interactive"></iframe>
+       <iframe width="572" height="371" seamless frameborder="0" scrolling="yes" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRRtDdM2lDhqg2gXJr4gtz2BeKjxS8EJCbSnTJytZgA6wLnjUKHaUBVeiyaQlIF7adwkFFHHz3oOuYu/pubchart?oid=736627100&amp;format=interactive"></iframe>
       </div>
     </article>
 
