--- a/archived/index_ORIG.html
+++ b/archived/index_ORIG.html
@@ -8,33 +8,6 @@
     <?!= include('styles'); ?>
     <link rel="stylesheet" href="assets/css/styles.css?v=7">
 
-  
-    <style>
-      /* Training snapshot selector (index hero card) */
-      .snapshot-select{
-        display:flex; gap:10px; align-items:center;
-        margin: 10px 0 12px;
-        padding: 10px 12px;
-        border: 1px solid var(--border-subtle);
-        border-radius: 14px;
-        background: rgba(255,255,255,0.03);
-      }
-      .snapshot-select label{ color: var(--muted); font-size: 0.9rem; }
-      .snapshot-select select{
-        flex:1;
-        padding: 8px 10px;
-        border-radius: 12px;
-        border: 1px solid var(--border-subtle);
-        background: rgba(0,0,0,0.2);
-        color: var(--text);
-        outline:none;
-      }
-      .snapshot-select select:focus{
-        border-color: rgba(255,75,38,0.8);
-        box-shadow: 0 0 0 3px rgba(255,75,38,0.15);
-      }
-    </style>
-
   </head>
   <body>
     
@@ -105,17 +78,10 @@
       </p>
 
       <!-- STACKED WEEK SNAPSHOTS -->
-
-      <!-- ✅ Week selector for the Training Snapshot card -->
-      <div class="snapshot-select">
-        <label for="snapshotWeekSelect">Week:</label>
-        <select id="snapshotWeekSelect" aria-label="Select snapshot week"></select>
-      </div>
-
       <div class="snapshot-weeks">
 
         <!-- Week 01 -->
-        <div class="snapshot-week" data-sweek="2025-12-07">
+        <div class="snapshot-week">
           <h4 class="snapshot-week-title">Week 01</h4>
           <table class="snapshot-table">
             <tbody>
@@ -170,7 +136,7 @@
         </div>
 
         <!-- Week 02 -->
-        <div class="snapshot-week" data-sweek="2025-12-14">
+        <div class="snapshot-week">
           <h4 class="snapshot-week-title">Week 02</h4>
           <table class="snapshot-table">
             <tbody>
@@ -286,7 +252,9 @@
   <div class="card-tag">Video</div>
   <h3 class="card-title">Latest weekly recap video</h3>
   <div class="video-embed">
-    <div style="position: relative; overflow: hidden; aspect-ratio: 1920/1080"><iframe src="https://share.synthesia.io/embeds/videos/083de21a-7de4-486f-8f48-8ccdffecd03c" loading="lazy" title="Synthesia video player - Hyrox Week02 Recap" allowfullscreen allow="encrypted-media; fullscreen; microphone;" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0; margin: 0; overflow:hidden;"></iframe></div>
+   
+
+    <div style="position: relative; overflow: hidden; aspect-ratio: 1920/1080"><iframe src="https://share.synthesia.io/embeds/videos/ec59b781-b6a6-498c-8823-ec7e0debff3a" loading="lazy" title="Synthesia video player - Jeff HYROX Week1 Recap" allowfullscreen allow="encrypted-media; fullscreen; microphone;" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0; margin: 0; overflow:hidden;"></iframe></div>
   </div>
 </article>
 
@@ -344,55 +312,6 @@
           links.classList.toggle('nav-open');
           toggle.classList.toggle('nav-open');
         });
-
-        // Training Snapshot selector (defaults to latest week; does NOT affect "This week at a glance")
-        const SNAPSHOT_WEEKS = [
-          { key: "2025-12-14", label: "Week 02 (Dec 8 – Dec 14)", default: true },
-          { key: "2025-12-07", label: "Week 01 (Dec 1 – Dec 7)" }
-        ];
-
-        const snapSelect = document.getElementById("snapshotWeekSelect");
-        const snapCards = Array.from(document.querySelectorAll("[data-sweek]"));
-
-        function getSnapshotWeekFromUrl() {
-          const params = new URLSearchParams(window.location.search);
-          return params.get("snapshotWeek");
-        }
-
-        function setSnapshotWeekInUrl(weekKey) {
-          const url = new URL(window.location.href);
-          url.searchParams.set("snapshotWeek", weekKey);
-          window.history.replaceState({}, "", url.toString());
-        }
-
-        function showSnapshotWeek(weekKey) {
-          snapCards.forEach(el => {
-            el.style.display = (el.getAttribute("data-sweek") === weekKey) ? "block" : "none";
-          });
-          setSnapshotWeekInUrl(weekKey);
-        }
-
-        function initSnapshotSelector() {
-          if (!snapSelect) return;
-
-          SNAPSHOT_WEEKS.forEach(w => {
-            const opt = document.createElement("option");
-            opt.value = w.key;
-            opt.textContent = w.label;
-            snapSelect.appendChild(opt);
-          });
-
-          const urlWeek = getSnapshotWeekFromUrl();
-          const defaultWeek = urlWeek || (SNAPSHOT_WEEKS.find(w => w.default)?.key) || SNAPSHOT_WEEKS[0].key;
-
-          snapSelect.value = defaultWeek;
-          showSnapshotWeek(defaultWeek);
-
-          snapSelect.addEventListener("change", (e) => showSnapshotWeek(e.target.value));
-        }
-
-        initSnapshotSelector();
-
       });
     </script>
     
