--- a/community.html
+++ b/community.html
@@ -73,7 +73,8 @@
               In Forms: Send → </> Embed → copy iframe and paste below.
             -->
             <!-- <iframe src="YOUR_GOOGLE_FORM_EMBED_URL" width="100%" height="600"></iframe> -->
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfZWnZZVG1HjOQwDynN3sunX0A2Gu7O1U2Uw46QcuatTML4CQ/viewform?embedded=true" width="640" height="802" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfZWnZZVG1HjOQwDynN3sunX0A2Gu7O1U2Uw46QcuatTML4CQ/viewform?embedded=true" width="640" height="802" frameborder="0" scrolling="yes" marginheight="0" marginwidth="0">Loading…</iframe>
+            
           </div>
         </section>
 
@@ -81,7 +82,7 @@
         <section class="section">
           <div class="section-header">
             <h2 class="section-title">Featured notes from others</h2>
-            <p class="section-subtitle">Copy a few meaningful responses here (first name only).</p>
+            <p class="section-subtitle">Here are a few meaningful responses here (first name only displayed).</p>
           </div>
 
           <div class="card-grid">
