Workout Images week 2

--- a/workouts.html
+++ b/workouts.html
@@ -91,7 +91,7 @@
                 HRV, stress, and readiness from Welltory that guide intensity for the day.
               </p>
               <div class="metric-image-frame">
-  <img src="assets/img/Welltory-week2.png" alt="Welltory week 2">
+  <img src="assets/img/Welltory-end-week2.jpg" alt="Welltory week 2">
 </div>
 </article>
 
@@ -103,7 +103,7 @@
                 Sleep, recovery, and strain metrics that inform how aggressive the session should be.
               </p>
               <div class="metric-image-frame">
-            <img src="assets/img/Ultra-week2.png" alt="Ultrahuman week 2">
+            <img src="assets/img/Ultrahuman-end-week2.jpg" alt="Ultrahuman week 2">
 </div>
 </article>
     </div>
