--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
             class="btn btn-ghost">
             View training metrics
             </a>
+
+            <a class="journey-insights-btn" href="journey-insights.html">🔥 Journey Insights</a>
           </div>
 
           </div>
