--- a/community.html
+++ b/community.html
@@ -75,7 +75,7 @@
             <!-- <iframe src="YOUR_GOOGLE_FORM_EMBED_URL" width="100%" height="600"></iframe> -->
             <div class="form-embed">
               <iframe
-                src="https://docs.google.com/forms/d/e/1FAIpQLSfZWnZZVG1HjOQwDynN3sunX0A2Gu7O1U2Uw46QcuatTML4CQ/viewform?embedded=true"
+                src="https://docs.google.com/forms/d/e/1FAIpQLSfZWnZZVG1HjOQwDynN3sunX0A2Gu7O1U2Uw46QcuatTML4CQ/viewform?embedded=true" width="100%" height="600"
                 title="Community Form"
                 loading="lazy"
                 frameborder="0"
