--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     />
 
     <div class="winter-badge-text">
-      <div class="kicker">WINTER PROTOCOL</div>
+      <div class="kicker">WINTER PROTOCOL (Click the badge to visit the winter training protocol)</div>
       <h3>Cold-Season Engine Builder</h3>
       <p>
         This badge represents disciplined winter training — maintaining aerobic capacity (VO₂ max),
