Start of week3 pages

--- a/index.html
+++ b/index.html
@@ -226,6 +226,61 @@
 
         </div>
 
+        <!-- Week 03 -->
+        <div class="snapshot-week" data-sweek="2025-12-21">
+          <h4 class="snapshot-week-title">Week 03</h4>
+          <table class="snapshot-table">
+            <tbody>
+              <tr>
+                <tr class="zone-1">
+                  <td>Zone 1</td>
+                <td>107 min</td>
+              </tr>
+              <tr>
+                 <tr class="zone-2">
+                  <td>Zone 2</td>
+                <td>19 min</td>
+              </tr>
+              <tr>
+                <tr class="zone-3">
+                  <td>Zone 3</td>
+                <td>7.5 min</td>
+              </tr>
+              <tr>
+                <tr class="zone-4">
+                  <td>Zone 4</td>
+                <td>5 min</td>
+              </tr>
+              <tr>
+                <tr class="zone-5">
+                  <td>Zone 5</td>
+                <td>0 min</td>
+              </tr>
+            </tbody>
+          </table>
+<table class="snapshot-table">
+    <tbody>
+      <tr>
+        <td><strong>Total Training Time</strong></td>
+        <td>3h 0m</td>
+      </tr>
+      <tr>
+        <td><strong>Total Miles</strong></td>
+        <td>0.75 miles</td>
+      </tr>
+      <tr>
+        <td><strong>VO₂ Max</strong></td>
+        <td>43.4 → 43.5</td>
+      </tr>
+      <tr>
+        <td><strong>DOMS</strong></td>
+        <td>Zero</td>
+      </tr>
+    </tbody>
+  </table>
+
+        </div>
+
         <!-- Add Week 03, Week 04 etc. the same way -->
 
       </div>
@@ -377,7 +432,8 @@
 
         // Training Snapshot selector (defaults to latest week; does NOT affect "This week at a glance")
         const SNAPSHOT_WEEKS = [
-          { key: "2025-12-14", label: "Week 02 (Dec 8 – Dec 14)", default: true },
+        { key: "2025-12-21", label: "Week 03 (Dec 15 – Dec 21)", default: true },  
+        { key: "2025-12-14", label: "Week 02 (Dec 8 – Dec 14)" },
           { key: "2025-12-07", label: "Week 01 (Dec 1 – Dec 7)" }
         ];
 
