--- a/workouts.html
+++ b/workouts.html
@@ -420,6 +420,142 @@
   <div class="session">
   <div class="session-header">
   <div class="session-main">
+  <span class="session-name">Hyrox Row</span>
+  <span class="session-meta">4.25 min · 0.62 mi</span>
+  </div>
+  <div class="session-zone">Primary Zone: Zone 3</div>
+  </div>
+  
+  <table class="session-table">
+  <thead>
+  <tr>
+  <th>Exercise</th>
+  <th>Reps / Load</th>
+  <th>Duration</th>
+  <th>Side / Stance</th>
+  <th>Hyrox Focus</th>
+  <th>Notes</th>
+  </tr>
+  </thead>
+  <tbody>
+  
+  <tr>
+  <td>Hyrox Row</td>
+  <td>-</td>
+  <td>4.25 min</td>
+  <td>-</td>
+  <td>Rower 4:27 Row time 1 km</td>
+  <td>1</td>
+  </tr>
+  </tbody>
+  </table>
+  
+  
+  <div class="session-hr-summary">
+  <h4>Heart Rate Summary</h4>
+  <table class="snapshot-table">
+  <thead>
+  <tr>
+  <th colspan="2">HR Zones</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr class="zone-1">
+  <td>Zone 1</td>
+  <td>0 min</td>
+  </tr>
+  <tr class="zone-2">
+  <td>Zone 2</td>
+  <td>0 min</td>
+  </tr>
+  <tr class="zone-3">
+  <td>Zone 3</td>
+  <td>3 min</td>
+  </tr>
+  <tr class="zone-4">
+  <td>Zone 4</td>
+  <td>1 min</td>
+  </tr>
+  <tr class="zone-5">
+  <td>Zone 5</td>
+  <td>0 min</td>
+  </tr>
+  </tbody>
+  </table>
+  </div>
+  </div>
+  
+  <div class="session">
+  <div class="session-header">
+  <div class="session-main">
+  <span class="session-name">Hyrox SkiERG</span>
+  <span class="session-meta">4.5 min · 0.62 mi</span>
+  </div>
+  <div class="session-zone">Primary Zone: Zone 4</div>
+  </div>
+  
+  <table class="session-table">
+  <thead>
+  <tr>
+  <th>Exercise</th>
+  <th>Reps / Load</th>
+  <th>Duration</th>
+  <th>Side / Stance</th>
+  <th>Hyrox Focus</th>
+  <th>Notes</th>
+  </tr>
+  </thead>
+  <tbody>
+  
+  <tr>
+  <td>Hyrox SkiERG</td>
+  <td>-</td>
+  <td>4.5 min</td>
+  <td>-</td>
+  <td>SkiERG 4:13 time 1 km</td>
+  <td>4</td>
+  </tr>
+  </tbody>
+  </table>
+  
+  
+  <div class="session-hr-summary">
+  <h4>Heart Rate Summary</h4>
+  <table class="snapshot-table">
+  <thead>
+  <tr>
+  <th colspan="2">HR Zones</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr class="zone-1">
+  <td>Zone 1</td>
+  <td>0 min</td>
+  </tr>
+  <tr class="zone-2">
+  <td>Zone 2</td>
+  <td>0 min</td>
+  </tr>
+  <tr class="zone-3">
+  <td>Zone 3</td>
+  <td>0.5 min</td>
+  </tr>
+  <tr class="zone-4">
+  <td>Zone 4</td>
+  <td>4 min</td>
+  </tr>
+  <tr class="zone-5">
+  <td>Zone 5</td>
+  <td>0 min</td>
+  </tr>
+  </tbody>
+  </table>
+  </div>
+  </div>
+  
+  <div class="session">
+  <div class="session-header">
+  <div class="session-main">
   <span class="session-name">Professional Stretch</span>
   <span class="session-meta">25 min</span>
   </div>
@@ -610,7 +746,7 @@
   </div>
   
   </div>
-  </article>    
+  </article>
   <!-- Tuesday 12/16/25 – example with one card for today -->
      
   <!-- Wednesday 12/17/25 – example with one card for today -->
