Hyrox focus 12/15/25 notes

--- a/workouts.html
+++ b/workouts.html
@@ -445,7 +445,7 @@
   <td>4.25 min</td>
   <td>-</td>
   <td>Rower 4:27 Row time 1 km</td>
-  <td>1</td>
+  <td>Race Pace, went slow and felt good, damper setting 4</td>
   </tr>
   </tbody>
   </table>
@@ -513,7 +513,7 @@
   <td>4.5 min</td>
   <td>-</td>
   <td>SkiERG 4:13 time 1 km</td>
-  <td>4</td>
+  <td>Race Pace, went slow and felt good, damper setting 4</td>
   </tr>
   </tbody>
   </table>
