--- a/workouts.html
+++ b/workouts.html
@@ -748,7 +748,375 @@
   </div>
   </article>
   <!-- Tuesday 12/16/25 – example with one card for today -->
-     
+     <article class="card workout-day">
+<div class="workout-day-header">
+<div class="workout-date">Tuesday – Week 03</div>
+<div class="workout-tag">Daily Training Summary</div>
+</div>
+
+
+<div class="daily-metrics-block">
+<h4>Daily Metrics</h4>
+<ul class="daily-metrics-list">
+<li><strong>Sleep:</strong> 8.5 hrs · Score 76</li>
+<li><strong>HRV:</strong> 65 ms · <strong>Resting HR:</strong> 52 bpm</li>
+<li><strong>VO₂ Max:</strong> 43.5</li>
+<li><strong>Weight:</strong> 176 lb · 15.7% BF · Lean Mass 139.2 lb</li>
+<li><strong>DOMS:</strong> - · <strong>Energy:</strong> 9 / 10 · <strong>Stress:</strong> 1 / 10</li>
+<li><strong>Hydration:</strong> Hydrated · <strong>Mood:</strong> 9 / 10</li>
+<li><strong>BCE:</strong> 2470 · <strong>KVAS:</strong> 17</li>
+</ul>
+</div>
+
+
+<div class="sessions-list">
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Morning Stretch</span>
+<span class="session-meta">15 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Chest Opener</td>
+<td>3 × 1</td>
+<td>60 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>Stretch</td>
+</tr>
+<tr>
+<td>Arm Circles</td>
+<td>3 × 1</td>
+<td>60 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>Stretch</td>
+</tr>
+<tr>
+<td>Hamstring stretch</td>
+<td>3 × 1</td>
+<td>60 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>Stretch</td>
+</tr>
+<tr>
+<td>Calf Stretch</td>
+<td>3 × 1</td>
+<td>60 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>Stretch</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>15 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Strength training</span>
+<span class="session-meta">65 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 3</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Wall balls</td>
+<td>4 × 35 @ 20 lb</td>
+<td>240 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>60 seconds per each round to do 35</td>
+</tr>
+<tr>
+<td>Single Arm Gorilla Rows</td>
+<td>4 × 10 @ 65 lb</td>
+<td>120 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>Kettle bell 65 lbs</td>
+</tr>
+<tr>
+<td>Goblet squats</td>
+<td>4 × 10 @ 30 lb</td>
+<td>120 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>Dumbell 30 lbs</td>
+</tr>
+<tr>
+<td>Left twist Lunge </td>
+<td>4 × 10 @ 30 lb</td>
+<td>120 sec</td>
+<td>Left</td>
+<td>Other</td>
+<td>Dumbell 30 lbs</td>
+</tr>
+<tr>
+<td>Right twist Lunge</td>
+<td>4 × 10 @ 30 lb</td>
+<td>180 sec</td>
+<td>Right</td>
+<td>Other</td>
+<td>Dumbell 30 lbs</td>
+</tr>
+<tr>
+<td>Planks</td>
+<td>4 × 10</td>
+<td>480 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>2 min planks</td>
+</tr>
+<tr>
+<td>Bent over barbell power row</td>
+<td>4 × 5 @ 115 lb</td>
+<td>120 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>115 lbs barbell</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>12 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>12 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>36 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>5 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Evening cool down walk</span>
+<span class="session-meta">20 min · 1.5 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Evening cool down walk</td>
+<td>-</td>
+<td>20 min</td>
+<td>-</td>
+<td>Recovery Raising HRV</td>
+<td>-</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>20 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">NSDR Breathing</span>
+<span class="session-meta">20 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>NSDR Breathing</td>
+<td>-</td>
+<td>20 min</td>
+<td>-</td>
+<td>Recovery Raising HRV</td>
+<td>-</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>20 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+</div>
+</article>
   <!-- Wednesday 12/17/25 – example with one card for today -->
      
   <!-- Thursday 12/18/25 – example with one card for today -->
