--- a/workouts.html
+++ b/workouts.html
@@ -748,7 +748,7 @@
   </div>
   </article>
   <!-- Tuesday 12/16/25 – example with one card for today -->
-     <article class="card workout-day">
+ <article class="card workout-day">
 <div class="workout-day-header">
 <div class="workout-date">Tuesday – Week 03</div>
 <div class="workout-tag">Daily Training Summary</div>
@@ -890,7 +890,7 @@
 <td>4 × 35 @ 20 lb</td>
 <td>240 sec</td>
 <td>Both</td>
-<td>Other</td>
+<td>Wall Ball</td>
 <td>60 seconds per each round to do 35</td>
 </tr>
 <tr>
@@ -898,7 +898,7 @@
 <td>4 × 10 @ 65 lb</td>
 <td>120 sec</td>
 <td>Alternating</td>
-<td>Other</td>
+<td>Sled Pull</td>
 <td>Kettle bell 65 lbs</td>
 </tr>
 <tr>
@@ -906,7 +906,7 @@
 <td>4 × 10 @ 30 lb</td>
 <td>120 sec</td>
 <td>Both</td>
-<td>Other</td>
+<td>Lunges</td>
 <td>Dumbell 30 lbs</td>
 </tr>
 <tr>
@@ -914,7 +914,7 @@
 <td>4 × 10 @ 30 lb</td>
 <td>120 sec</td>
 <td>Left</td>
-<td>Other</td>
+<td>Lunges</td>
 <td>Dumbell 30 lbs</td>
 </tr>
 <tr>
@@ -922,7 +922,7 @@
 <td>4 × 10 @ 30 lb</td>
 <td>180 sec</td>
 <td>Right</td>
-<td>Other</td>
+<td>Lunges</td>
 <td>Dumbell 30 lbs</td>
 </tr>
 <tr>
@@ -938,7 +938,7 @@
 <td>4 × 5 @ 115 lb</td>
 <td>120 sec</td>
 <td>Both</td>
-<td>Other</td>
+<td>Sled Pull</td>
 <td>115 lbs barbell</td>
 </tr>
 </tbody>
@@ -1116,7 +1116,7 @@
 </div>
 
 </div>
-</article>
+</article> 
   <!-- Wednesday 12/17/25 – example with one card for today -->
      
   <!-- Thursday 12/18/25 – example with one card for today -->
