--- a/workouts.html
+++ b/workouts.html
@@ -1536,7 +1536,291 @@
 </div>
 </article>
   <!-- Saturday 12/20/25 – example with one card for today -->
-  
+  <article class="card workout-day">
+<div class="workout-day-header">
+<div class="workout-date">Saturday – Week 03</div>
+<div class="workout-tag">Daily Training Summary</div>
+</div>
+
+
+<div class="daily-metrics-block">
+<h4>Daily Metrics</h4>
+<ul class="daily-metrics-list">
+<li><strong>Sleep:</strong> 9.75 hrs · Score 82</li>
+<li><strong>HRV:</strong> 59 ms · <strong>Resting HR:</strong> 55 bpm</li>
+<li><strong>VO₂ Max:</strong> 43.8</li>
+<li><strong>Weight:</strong> 174.3 lb · 15.2% BF · Lean Mass 139.6 lb</li>
+<li><strong>DOMS:</strong> - · <strong>Energy:</strong> 9 / 10 · <strong>Stress:</strong> 1 / 10</li>
+<li><strong>Hydration:</strong> Hydrated · <strong>Mood:</strong> 9 / 10</li>
+<li><strong>BCE:</strong> 2356 · <strong>KVAS:</strong> 16</li>
+</ul>
+</div>
+
+
+<div class="sessions-list">
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Walk / Jog</span>
+<span class="session-meta">15 min · 1 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Walk / Jog</td>
+<td>-</td>
+<td>15 min</td>
+<td>-</td>
+<td>Recovery Raising HRV</td>
+<td>-</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>15 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Professional Stretch</span>
+<span class="session-meta">25 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Periformis stretch</td>
+<td>2 × 1</td>
+<td>120 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>-</td>
+</tr>
+<tr>
+<td>Hamstring stretch</td>
+<td>2 × 1</td>
+<td>120 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>-</td>
+</tr>
+<tr>
+<td>Calf Stretch</td>
+<td>2 × 1</td>
+<td>120 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>-</td>
+</tr>
+<tr>
+<td>Quad Stretch</td>
+<td>2 × 1</td>
+<td>120 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>-</td>
+</tr>
+<tr>
+<td>IT band stretch</td>
+<td>2 × 1</td>
+<td>120 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>-</td>
+</tr>
+<tr>
+<td>Hip Flexor stretch</td>
+<td>2 × 1</td>
+<td>120 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>-</td>
+</tr>
+<tr>
+<td>T Spine stretch</td>
+<td>2 × 1</td>
+<td>120 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>-</td>
+</tr>
+<tr>
+<td>Thoracic rotations</td>
+<td>2 × 1</td>
+<td>120 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>-</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>25 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">NSDR Breathing</span>
+<span class="session-meta">20 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>NSDR Breathing</td>
+<td>-</td>
+<td>20 min</td>
+<td>-</td>
+<td>Recovery Raising HRV</td>
+<td>-</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>20 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+</div>
+</article>
   <!-- Sunday 12/21/25 – example with one card for today -->
      
 </div>
