Sunday Weekend, weekly recaps, updated home page.

--- a/weekly-recaps.html
+++ b/weekly-recaps.html
@@ -93,7 +93,60 @@
         <section class="section">
           <div class="recap-list">
 
-            <!-- ====== WEEK 02 CARD (LATEST) ====== -->
+            <!-- ====== WEEK 03 CARD (LATEST) ====== -->
+            <article class="recap-card" data-week="2025-12-21">
+              <div class="recap-meta">Week 03 · Dec 15 – Dec 21, 2025</div>
+              <h2 class="recap-title">Building Volume Without Breaking</h2>
+
+              <div class="recap-columns">
+                <div class="recap-text">
+                  <p>
+                   Week 3 was about continuing to build fitness the right way — without forcing intensity, without chasing fatigue, and without borrowing from future recovery.
+The focus remained on arriving to workouts ready, executing with intention, and leaving enough in the tank to train again the next day. Daily readiness stayed consistent, recovery was intact, and VO₂ max continued trending upward even without “hero” sessions.
+Tempo work reinforced HYROX race pacing rather than suffering, aerobic volume was maintained, and nervous system quality was protected. This approach keeps progress moving forward while minimizing injury risk — especially important with five weeks to race day and the holidays approaching.
+The result was a week that didn’t look dramatic on paper, but quietly moved the needle in all the right directions.
+                  </p>
+
+                  <div class="card" style="margin-top: 10px;">
+                    <div class="card-tag">Reflection</div>
+                    <p class="card-body">
+                     <ul class="recap-wins">
+                      <li>Consistent training without accumulating fatigue</li>
+                      <li>VO₂ max continued to improve with controlled effort</li>
+                      <li>Readiness and recovery remained stable all week</li>
+                      <li>Tempo runs reinforced sustainable HYROX race pace</li>
+                      <li>Minimal soreness and no missed sessions</li>
+                      <li>Confidence increased heading into the holiday week</li>
+                    </ul>
+                    </p>
+                  </div>
+
+                  <div class="recap-keypoints">
+                    <strong>Key metrics:</strong><br>
+                    • Total time: 8h 53m · Total miles: 18.7<br>
+                    • HR Zones: Z1 354.25m · Z2 47m · Z3 69m · Z4 53m · Z5 7.65m<br>
+                    • VO₂ Max: 43.4 → 44.7 · DOMS: Zero<br>
+                    • Theme: Building fitness without borrowing from the future (5 weeks to race day)
+                  </div>
+
+                  <div class="card" style="margin-top: 10px;">
+                    <div class="card-tag">Week 04 Focus</div>
+                    <p class="card-body">
+                    holiday travel (Weeks 4–5), Temo Run zones 3 - 4 to keep VO2 Max high and improve 1k Split times.
+                    </p>
+                  </div>
+
+                  <div class="video-embed" style="margin-top: 12px;">
+                    <!-- Paste Synthesia Week 03 embed iframe below when ready -->
+                    <div class="video-embed">
+                       <div style="position: relative; overflow: hidden; aspect-ratio: 1920/1080"><iframe src="https://share.synthesia.io/embeds/videos/7b70d913-9248-4970-9122-f16eb3977ce1" loading="lazy" title="Synthesia video player - Hyrox Week03 Recap" allowfullscreen allow="encrypted-media; fullscreen; microphone;" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0; margin: 0; overflow:hidden;"></iframe></div>
+                    </div>
+                </div>
+              </div>
+            </article>
+            <!-- ====== END WEEK 03 ====== -->
+
+            <!-- ====== WEEK 02 CARD ====== -->
             <article class="recap-card" data-week="2025-12-14">
               <div class="recap-meta">Week 02 · Dec 8 – Dec 14, 2025</div>
               <h2 class="recap-title">Building Volume Without Breaking</h2>
@@ -209,7 +262,8 @@
 
         // Week selector logic
         const RECAP_WEEKS = [
-          { key: "2025-12-14", label: "Week 02 (Dec 8 – Dec 14, 2025)", default: true },
+          { key: "2025-12-21", label: "Week 03 (Dec 15 – Dec 21, 2025)", default: true },
+          { key: "2025-12-14", label: "Week 02 (Dec 8 – Dec 14, 2025)" },
           { key: "2025-12-07", label: "Week 01 (Dec 1 – Dec 7, 2025)" }
         ];
 
