--- a/index.html
+++ b/index.html
@@ -234,27 +234,27 @@
               <tr>
                 <tr class="zone-1">
                   <td>Zone 1</td>
-                <td>324.25 min</td>
+                <td>354.25 min</td>
               </tr>
               <tr>
                  <tr class="zone-2">
                   <td>Zone 2</td>
-                <td>38.5 min</td>
+                <td>47 min</td>
               </tr>
               <tr>
                 <tr class="zone-3">
                   <td>Zone 3</td>
-                <td>53.5 min</td>
+                <td>69 min</td>
               </tr>
               <tr>
                 <tr class="zone-4">
                   <td>Zone 4</td>
-                <td>37 min</td>
+                <td>53 min</td>
               </tr>
               <tr>
                 <tr class="zone-5">
                   <td>Zone 5</td>
-                <td>5 min</td>
+                <td>7.65 min</td>
               </tr>
             </tbody>
           </table>
@@ -262,15 +262,15 @@
     <tbody>
       <tr>
         <td><strong>Total Training Time</strong></td>
-        <td>7h 38m</td>
+        <td>8h 53m</td>
       </tr>
       <tr>
         <td><strong>Total Miles</strong></td>
-        <td>11.75 miles</td>
+        <td>18.7 miles</td>
       </tr>
       <tr>
         <td><strong>VO₂ Max</strong></td>
-        <td>43.4 → 43.5</td>
+        <td>43.4 → 44.7</td>
       </tr>
       <tr>
         <td><strong>DOMS</strong></td>
@@ -278,10 +278,62 @@
       </tr>
     </tbody>
   </table>
-
-        </div>
+  </div>
 
         <!-- Add Week 03, Week 04 etc. the same way -->
+         <!-- Week 04 -->
+        <div class="snapshot-week" data-sweek="2025-12-28">
+          <h4 class="snapshot-week-title">Week 03</h4>
+          <table class="snapshot-table">
+            <tbody>
+              <tr>
+                <tr class="zone-1">
+                  <td>Zone 1</td>
+                <td>0 min</td>
+              </tr>
+              <tr>
+                 <tr class="zone-2">
+                  <td>Zone 2</td>
+                <td>0 min</td>
+              </tr>
+              <tr>
+                <tr class="zone-3">
+                  <td>Zone 3</td>
+                <td>0 min</td>
+              </tr>
+              <tr>
+                <tr class="zone-4">
+                  <td>Zone 4</td>
+                <td>0 min</td>
+              </tr>
+              <tr>
+                <tr class="zone-5">
+                  <td>Zone 5</td>
+                <td>0 min</td>
+              </tr>
+            </tbody>
+          </table>
+<table class="snapshot-table">
+    <tbody>
+      <tr>
+        <td><strong>Total Training Time</strong></td>
+        <td>0h 0m</td>
+      </tr>
+      <tr>
+        <td><strong>Total Miles</strong></td>
+        <td>0 miles</td>
+      </tr>
+      <tr>
+        <td><strong>VO₂ Max</strong></td>
+        <td>44.7 → 44.7</td>
+      </tr>
+      <tr>
+        <td><strong>DOMS</strong></td>
+        <td>Zero</td>
+      </tr>
+    </tbody>
+  </table>
+  </div>
 
       </div>
     </article>
@@ -371,8 +423,10 @@
   <div class="card-tag">Video</div>
   <h3 class="card-title">Latest weekly recap video</h3>
   <div class="video-embed">
-    <div style="position: relative; overflow: hidden; aspect-ratio: 1920/1080"><iframe src="https://share.synthesia.io/embeds/videos/083de21a-7de4-486f-8f48-8ccdffecd03c" loading="lazy" title="Synthesia video player - Hyrox Week02 Recap" allowfullscreen allow="encrypted-media; fullscreen; microphone;" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0; margin: 0; overflow:hidden;"></iframe></div>
+    <div style="position: relative; overflow: hidden; aspect-ratio: 1920/1080"><iframe src="https://share.synthesia.io/embeds/videos/7b70d913-9248-4970-9122-f16eb3977ce1" loading="lazy" title="Synthesia video player - Hyrox Week03 Recap" allowfullscreen allow="encrypted-media; fullscreen; microphone;" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0; margin: 0; overflow:hidden;"></iframe></div>
   </div>
+
+  
 </article>
 
 
@@ -432,9 +486,10 @@
 
         // Training Snapshot selector (defaults to latest week; does NOT affect "This week at a glance")
         const SNAPSHOT_WEEKS = [
-        { key: "2025-12-21", label: "Week 03 (Dec 15 – Dec 21)", default: true },  
+        { key: "2025-12-28", label: "Week 04 (Dec 22 – Dec 28)", default: true }, 
+        { key: "2025-12-21", label: "Week 03 (Dec 15 – Dec 21)" },  
         { key: "2025-12-14", label: "Week 02 (Dec 8 – Dec 14)" },
-          { key: "2025-12-07", label: "Week 01 (Dec 1 – Dec 7)" }
+        { key: "2025-12-07", label: "Week 01 (Dec 1 – Dec 7)" }
         ];
 
         const snapSelect = document.getElementById("snapshotWeekSelect");
