Fixed combined stats on week4 workouts page.

--- a/workouts.html
+++ b/workouts.html
@@ -100,10 +100,10 @@
               <div class="card-tag">Metrics</div>
               <h3 class="card-title">Ultrahuman Ring</h3>
               <p class="card-body">
-                Sleep, recovery, and strain metrics that inform how aggressive the session should be.
+                VI2 Max, HRV, and resting heart rate metrics that inform how aggressive the session should be.
               </p>
               <div class="metric-image-frame">
-            <img src="assets/img/Vo2max-week4.jpg" alt="Ultrahuman week 4">
+            <img src="assets/img/Stats-Week4.png" alt="Ultrahuman week 4">
 </div>
 </article>
     </div>
