--- a/workouts.html
+++ b/workouts.html
@@ -1251,7 +1251,167 @@
 </div>
 </article>   
  <!-- Friday 12/26/25 – example with one card for today -->
-      
+  <article class="card workout-day">
+<div class="workout-day-header">
+<div class="workout-date">Friday – 04</div>
+<div class="workout-tag">Daily Training Summary</div>
+</div>
+
+
+<div class="daily-metrics-block">
+<h4>Daily Metrics</h4>
+<ul class="daily-metrics-list">
+<li><strong>Sleep:</strong> 8.75 hrs · Score 85</li>
+<li><strong>HRV:</strong> 63 ms · <strong>Resting HR:</strong> 46 bpm</li>
+<li><strong>VO₂ Max:</strong> 44</li>
+<li><strong>Weight:</strong> 179.3 lb · 11.9% BF · Lean Mass 143.2 lb</li>
+<li><strong>DOMS:</strong> - · <strong>Energy:</strong> 9 / 10 · <strong>Stress:</strong> 1 / 10</li>
+<li><strong>Hydration:</strong> Hydrated · <strong>Mood:</strong> 9 / 10</li>
+<li><strong>BCE:</strong> 2280 · <strong>KVAS:</strong> 16</li>
+</ul>
+</div>
+
+
+<div class="sessions-list">
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Outdoor Walk / Jog</span>
+<span class="session-meta">60 min · 4.5 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Outdoor Walk / Jog</td>
+<td>-</td>
+<td>60 min</td>
+<td>-</td>
+<td>Recovery Raising HRV</td>
+<td>-</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>60 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">NSDR Breathing</span>
+<span class="session-meta">20 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>NSDR Breathing</td>
+<td>-</td>
+<td>20 min</td>
+<td>-</td>
+<td>Recovery Raising HRV</td>
+<td>-</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>20 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+</div>
+</article>    
  <!-- Saturday 12/27/25 – example with one card for today -->
      
  <!-- Sunday 12/28/25 – example with one card for today -->
